Provisionando máquinas com playbook do Ansible

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@
 .vagrant
 
 # Ignoring the private key
-configs/anspvtkey
+configs/anskey
+
+# Ignoring logs
+*.log
+
+# Ignoring retryies provided by Ansible
+*.retry
