--- a/configs/wordpress_provisioning.yml
+++ b/configs/wordpress_provisioning.yml
@@ -1,141 +1,8 @@
 ---
-  - hosts: wordpress
-    handlers:
-      - name: restart apache
-        service:
-          name: apache2
-          state: restarted
-        become: yes
-    tasks:
-      # Initial way to install packages and dependencies using Ansible
-      # - name: 'Instala o PHP 7.2'
-      #   apt:
-      #     name: php7.2
-      #     state: latest
-      #   become: yes
-      # - name: 'Instala o Apache2'
-      #   apt:
-      #     name: apache2
-      #     state: latest
-      #   become: yes
-      # - name: 'Instala o Apache Mod PHP 7.2'
-      #   apt:
-      #     name: libapache2-mod-php7.2
-      #     state: latest
-      #   become: yes
-
-      # Installing packages and dependencies using with_items function and {{ item }} variable
-      # - name: 'Instala pacotes de dependência do sistema operacional'
-      #   apt:
-      #     name: "{{ item }}"
-      #     state: latest
-      #   become: yes
-      #   with_items:
-      #     - php7.2
-      #     - apache2
-      #     - libapache2-mod-php7.2
-      #     - php7.2-gd
-      #     - php-ssh2
-      #     - libmcrypt-dev
-      #     - mysql-server-5.7
-      #     - python-mysqldb
-      #     - php7.2-mysql
-
-      # Installing packages and dependencies using only the name os packages
-      # This way is less verbose then the previous way, but less informative in what is being installed
-      - name: 'Instala pacotes de dependências do sistema operacional'
-        apt:
-          name:
-            - php7.2
-            - apache2
-            - libapache2-mod-php7.2
-            - php7.2-gd
-            - php-ssh2
-            - libmcrypt-dev
-            - mysql-server-5.7
-            - python-mysqldb
-            - php7.2-mysql
-          state: latest
-        become: yes
-
-      - name: 'Faz download do wordpress'
-        get_url:
-          url: https://br.wordpress.org/latest-pt_BR.tar.gz
-          dest: /tmp/latest-pt_BR.tar.gz
-
-      - name: 'Descompactar projeto do wordpress'
-        unarchive:
-          src: /tmp/latest-pt_BR.tar.gz
-          dest: /var/www/
-          remote_src: yes
-        become: yes
-
-      - name: 'Copia o arquivo de configuração do Wordpress'
-        copy:
-          src: '/var/www/wordpress/wp-config-sample.php'
-          dest: '/var/www/wordpress/wp-config.php'
-          remote_src: yes
-        become: yes
-
-      - name: 'Configura o wordpress'
-        replace:
-          path: /var/www/wordpress/wp-config.php
-          regexp: '{{ item.chave }}'
-          replace: '{{ item.valor }}'
-        with_items:
-            - { chave: 'nome_do_banco_de_dados_aqui', valor: 'softcube_db' }
-            - { chave: 'nome_de_usuario_aqui', valor: 'softcube' }
-            - { chave: 'senha_aqui', valor: 'Brasil@77!' }
-            - { chave: 'localhost', valor: '192.168.0.250'}
-        become: yes
-
-      - name: 'Serve o Wordpress no Apache'
-        copy:
-          src: /configs/apache/000-default.conf
-          dest: /etc/apache2/sites-available/000-default.conf
-        become: yes
-        notify:
-          - restart apache
-
   - hosts: mysql
-    handlers:
-      - name: restart mysql
-        service:
-          name: mysql
-          state: restarted
-        become: yes
-    tasks:
-      - name: 'Instala pacotes de dependências do sistema operacional'
-        apt:
-          name:
-            - mysql-server-5.7
-            - python-mysqldb
-          state: latest
-        become: yes
+    roles:
+      - mysql
 
-      - name: 'Cria o banco de dados da Softcube'
-        mysql_db:
-          name: softcube_db
-          state: present
-        become: yes
-
-      - name: 'Criar usuário no banco de dados'
-        mysql_user:
-          name: softcube
-          password: Brasil@77!
-          priv: 'softcube_db.*:ALL'
-          state: present
-          host: "{{ item }}"
-        become: yes
-        with_items:
-          - 'localhost'
-          - '127.0.0.1'
-          - '192.168.0.240'
-
-      - name: 'Configura o MySQL para acesso remoto'
-        copy:
-          src: /configs/mysql/mysqld.cnf
-          dest: /etc/mysql/mysql.conf.d/mysqld.cnf
-        become: yes
-        notify:
-          - restart mysql
+  - hosts: wordpress
+    roles:
+      - wordpress
